[package]
name = "svfplayer"
version = "0.1.0"
edition = "2021"
description = "SVF player using adapters from the jtag-taps crate"
license = "MIT"
repository = "https://github.com/srwalter/svfplayer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svf = "0.3"
jtag-taps = "0.2"
clap = { version = "4.4.6", features = ["derive"] }
